load("@rules_spring//springboot:springboot.bzl", "springboot")

springboot_deps = [
    "@rules_spring//springboot/import_bundles:springboot_required_deps",
    "@maven//:org_springframework_boot_spring_boot_starter_web",
    "@maven//:org_springframework_boot_spring_boot_starter_validation",
    "@maven//:org_springframework_boot_spring_boot_autoconfigure",
    "@maven//:org_springframework_boot_spring_boot",
    "@maven//:org_springframework_spring_web",
    "@maven//:org_springframework_spring_beans",
    "@maven//:org_springframework_spring_context",
    "@maven//:org_springframework_spring_core",
    "@maven//:io_temporal_temporal_sdk",
    "@maven//:io_temporal_temporal_serviceclient",
    "@maven//:org_slf4j_slf4j_api",
    "@maven//:io_micrometer_micrometer_observation",
    "@maven//:io_micrometer_micrometer_core",
    "//shared:shared",
]

java_library(
    name = "payment_service_lib",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    deps = springboot_deps,
)

springboot(
    name = "payment-service",
    boot_app_class = "com.voyage.payment.PaymentApplication",
    java_library = ":payment_service_lib",
    boot_launcher_class = "org.springframework.boot.loader.launch.JarLauncher",
)
